--- a/src/components/new/Some_Component_For_Post/GridImageStyle1/style.css
+++ b/src/components/new/Some_Component_For_Post/GridImageStyle1/style.css
@@ -1,5 +1,11 @@
+.GridImage1 {
+    height:100vh;
+}
 .GridImage1 .container {
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .GridImage1   .row {
     align-items: flex-end;
