--- a/src/components/new/FooterSection/style.css
+++ b/src/components/new/FooterSection/style.css
@@ -5,12 +5,20 @@
     color: var(--color-sand);
     overflow: hidden;
     
+    position:relative;
+    height:100vh;
+    width:100%;
 }
 #footer_section .container {
     display: grid;
 
  
-    position: relative;
+    position: absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    will-change:transform;
     z-index: 2;
 }
 #footer_section .title > div {
@@ -59,7 +67,7 @@
     }
     #footer_section  .divider {
         grid-column: 1 / 13;
-        margin: 3.1666666667vw 0;
+        margin: 0.1666666667vw 0;
     }
     #footer_section .address {
         grid-column: 1 / 4;
