--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -197,7 +197,8 @@ main {
     left: 0;
     width: 0;
     height: 1px;
-    background-color: var(--white);
+    filter:blur(.6px);
+    background-color:var(--color-sand-08) ;
     will-change: transform;
 }
 
