--- a/src/components/new/IntroWorkPage/style.css
+++ b/src/components/new/IntroWorkPage/style.css
@@ -131,7 +131,7 @@
         top: 0;
     }
     .IntroWorkPage .container {
-        /* margin: 0 8.3333333333vw; */
+        margin: 0 8.3333333333vw;
     }
     .IntroWorkPage .text-1 {
         align-items: flex-start;
