--- a/src/components/new/FooterSection/style.css
+++ b/src/components/new/FooterSection/style.css
@@ -12,7 +12,7 @@
 #footer_section .container {
     display: grid;
 
- 
+    padding: 0 8.3333333333vw;
     position: absolute;
     width:100%;
     height:100%;
