--- a/src/styles/clone.css
+++ b/src/styles/clone.css
@@ -3,19 +3,20 @@ section {
     border: 1px solid red;
     box-sizing: border-box;
 }
+blockquote, body, dd, dl, figcaption, figure, h1, h2, h3, h4, input, li, ol, p, ul {
+    margin: 0;
+}
 .container {
     position:relative;
     z-index:1;
 
-    width: 100%;
-    height: 100%;
 }
 .hero_section .text-1, .hero_section .text-2 {
     display: grid;
     align-items: flex-start;
 }
 @media (min-width: 601px) {
-    .container {
+    .hero_section .container {
         padding: 0 8.3333333333vw;  /* from margin */
     }
     .hero_section .text-1,.hero_section  .text-2 {
