--- a/src/components/new/ServicesSection/style.css
+++ b/src/components/new/ServicesSection/style.css
@@ -123,6 +123,11 @@
     #servcies_section .service:nth-child(2) {
         grid-column: 9 / 13;
         margin-top: 27.0833333333vw;
+
+       
+    }
+    #servcies_section .service:nth-child(2) > div {
+        aspect-ratio: 65 / 81;
     }
     #servcies_section .service:nth-child(3) {
         grid-column: 6 / 11;
