--- a/src/components/new/modules/WorkPage/style.css
+++ b/src/components/new/modules/WorkPage/style.css
@@ -77,6 +77,8 @@
     position: relative;
     width: 22.0833333333vw;
     z-index:10;
+
+    will-change:transform,opacity;
 }
 #work_page .thumbnail,#work_page  .thumbnail-image {
     bottom: 0;
@@ -104,8 +106,8 @@
     top: 0;
     width: 100%;
     z-index:1;
-    pointer-events: none;
-    user-select: none;
+  /*   pointer-events: none;
+    user-select: none; */
 
 }
 #work_page .projects button {
