--- a/src/components/new/Aboutus/Intro/style.css
+++ b/src/components/new/Aboutus/Intro/style.css
@@ -77,6 +77,11 @@
     margin-top: -34.1333333333vw;
     z-index: 1;
 }
+@media (max-width: 601px) {
+    .aboutus_intro .image:nth-child(1) {
+        display:none !important;
+    }
+}
 @media (min-width: 601px) {
     .aboutus_intro {
         padding: 0 0 12.9861111111vw;
