--- a/src/components/new/ServicesSection/style.css
+++ b/src/components/new/ServicesSection/style.css
@@ -2,6 +2,8 @@
     color: #0d0e13;
     color: var(--color-dark-grey);
     padding: 21.3333333333vw 0;
+
+    height:555vw;
     
 }
 #servcies_section .text {
@@ -63,11 +65,20 @@
     z-index: 1;
 }
 
-
-
-
+@media (max-width: 601px) {
+  
+    #servcies_section .services {
+        margin-top:8vw !important;
+    }
+    #servcies_section .service {
+        margin-bottom:8vw !important;
+    }
+}
 
 @media (min-width: 601px) {
+    #servcies_section{
+            height:189vw;
+        }
     .servcies_section {
      
         padding: 14.3055555556vw 0;
