--- a/src/components/new/Aboutus/Advantage/style.css
+++ b/src/components/new/Aboutus/Advantage/style.css
@@ -1,10 +1,11 @@
-.aboutus_advantage .aboutus_advantage {
+.aboutus_advantage {
+    position:relative;
     background: #0d0e13;
     background: var(--color-dark-grey);
     color: #e4e0db;
     color: var(--color-light-grey);
-    overflow: hidden;
-    padding: 21.3333333333vw 0;
+  
+    padding: 21.3333333333vw 0 ;
 }
 
 .aboutus_advantage .label {
@@ -48,21 +49,7 @@
 .aboutus_advantage .item {
     position: relative;
 }
-.aboutus_advantage .title {
-    margin: 26.6666666667vw 0;
-}
-.aboutus_advantage .title .line{
-    font-family: Lausanne-300;
-    font-family: var(--font-f-lausanne-300);
-    font-size: 25.6vw;
-    font-size: var(--font-s-h0);
-    letter-spacing: -1.2vw;
-    letter-spacing: var(--font-ls-h0);
-    line-height: 25.6vw;
-    line-height: var(--font-lh-h0);
 
-    white-space: nowrap;
-}
 /* list item */
 .aboutus_advantage .index {
     color: hsla(33, 14%, 88%, .8);
@@ -108,7 +95,7 @@
         margin: 0 8.3333333333vw;
     }
      .aboutus_advantage {
-        padding: 13.8888888889vw 0;
+        padding: 13.8888888889vw 0 0 0 ; 
     }
      .aboutus_advantage .label {
         height: 2.3611111111vw;
@@ -125,10 +112,7 @@
         margin: 4.8611111111vw 0 11.4583333333vw;
         width: 40.625vw;
     }
-     .aboutus_advantage .title {
-        grid-column: 1 / 13;
-        margin: 10.4166666667vw -8.3333333333vw;
-    }
+   
 
 
 
@@ -150,10 +134,10 @@
         grid-column: 8 / 12;
         margin-top: 10.4166666667vw;
     }
-     .aboutus_advantage .item:nth-child(4) {
+     .aboutus_advantage .item:nth-child(3) {
         grid-column: 2 / 5;
     }
-     .aboutus_advantage .item:nth-child(5) {
+     .aboutus_advantage .item:nth-child(4) {
         grid-column: 7 / 10;
         margin-top: 10.4166666667vw;
     }
