--- a/src/components/new/Aboutus/Minded/style.css
+++ b/src/components/new/Aboutus/Minded/style.css
@@ -100,7 +100,7 @@
 }
 @media (min-width: 601px) {
      .aboutus_minded  {
-        padding: 13.8888888889vw 0 0;
+        padding: 0 0 13.8888888889vw 0;
     }
      .aboutus_minded .container {
         display: grid;
