--- a/src/components/new/LetContact/style.css
+++ b/src/components/new/LetContact/style.css
@@ -117,7 +117,7 @@
     }
     #letcontact_section .media-wrapper {
         height: 66.25vw;
-        margin: 0 0 10.4166666667vw;
+        margin: 0;
     }
     #letcontact_section  .media:first-child {
         height: 44.375vw;
