--- a/src/components/new/ButtonMenu/style.css
+++ b/src/components/new/ButtonMenu/style.css
@@ -1,8 +1,8 @@
 #button_menu {
     color: #0d0e13;
     color: var(--white);
-    display: none;
-   
+    display: flex;
+
     padding: 8vw;
     position: fixed;
     right: 0;
