--- a/src/components/new/ProjectText/style.css
+++ b/src/components/new/ProjectText/style.css
@@ -88,7 +88,7 @@
     will-change:tranform;
 }
 .project_text h2 > span > span:nth-child(n) {
-    transform:translateY(80px);
+    transform:translateY(9.0666666667vw);
 }
 
 
@@ -114,7 +114,7 @@
     will-change:tranform;
 }
 .project_text .body p > span > span:nth-child(n) {
-    transform:translateY(50px);
+    transform:translateY(60px);
 }
 /* IMPORTANT */
 @media (min-width: 601px) {
