--- a/src/components/new/SectionIntractive/SectionTitleBlend/style.css
+++ b/src/components/new/SectionIntractive/SectionTitleBlend/style.css
@@ -11,7 +11,7 @@
     font-family: Lausanne-300;
     font-family: var(--font-f-lausanne-300);
     font-size: 25.6vw;
-    font-size: var(--font-s-h0);
+   /*  font-size: var(--font-s-h0); */
     letter-spacing: -1.2vw;
     letter-spacing: var(--font-ls-h0);
     line-height: 25.6vw;
