--- a/src/styles/config_clone.css
+++ b/src/styles/config_clone.css
@@ -45,3 +45,60 @@ a {
         margin: 0 8vw !important;
     }
 }
+
+/* #navbar {
+    transition: opacity 300ms;
+    will-change : opacity;
+}
+#button_menu {
+    transition: opacity 300ms;
+    opacity:0;
+    will-change : opacity;
+}
+@keyframes hiddenTarget {
+    from {opacity: 1}
+    to {opacity:0}
+  }
+  @keyframes showTarget {
+    from {opacity: 0}
+    to {opacity:1}
+  }
+  .ANIM_hidden_target {
+
+    animation-name: hiddenTarget;
+    animation-duration: 300ms;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    z-index:77 !important;
+  }
+  .ANIM_show_target {
+
+    animation-name: showTarget;
+    animation-duration: 300ms;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    z-index:99 !important;
+  } */
+
+
+  /* width */
+::-webkit-scrollbar {
+    width: 5px;
+    opacity:.2;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color:#80808054;
+
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--white);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--gray);
+  }
